tests/regression/errors/basic/undefined_var_2.csd
// Undefined variable test 2
vibez.spill("Using undefined:", undefined_var_2)
sus result drip = missing_variable + 2
